some path changes, nothing major

--- a/createlink.html
+++ b/createlink.html
@@ -1,5 +1,5 @@
 <html>
-	<form action="cgi-bin/customize.pl" method=POST>
+	<form action="/cgi-bin/hdticket_closer/customize.pl" method=POST>
 		enter your first name: <input type="text" name="name"><br>
 		<input type="submit">
 	</form>
